# C_OpenGL_graphic_engine

./: .gitignore  CMakeLists.txt  README.md  cube.c  cube.h  input.h  main  main.c  makefile  mathOpengl.c  mathOpengl.h  test_fs.glsl  test_vs.glsl  utils.c  utils.h
GL/: gl3w.h
resources/shaders/: cube_vs.glsl  light_fs.glsl  light_vs.glsl  model_fs.glsl  model_vs.glsl  terrain_fs.glsl  terrain_vs.glsl  test_fs.glsl  test_vs.glsl
src/: camera.c  camera.h  consts.h  cube.c  cube.h  defaultModel.c  defaultModel.h  input.c  input.h  main.c  mathOpengl.c  mathOpengl.h  model.c  model.h  perlin.c  perlin.h  shader.c  shader.h  terrain.c  terrain.h  utils.c  utils.h
src/model/: cube.c  cube.h  defaultModel.c  defaultModel.h  tile.c  tile.h  vModel.c  vModel.h  vtnModel.c  vtnModel.h  vtsModel.c  vtsModel.h
